<resources>
    <string name="app_name">TernaLogin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">password</string>

    <string name="don_t_have_account_create_a_new_account">Don\'t have Account, Create a New Account</string>
    <string name="todo">TODO</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_branch">Enter your Branch</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="division">Division</string>
    <string name="signup">SignUp</string>
    <string name="title">title</string>
    <string name="descripition">descripition</string>
    <string name="roll">roll</string>
    <string name="div">div</string>
    <string name="email">email</string>
    <string name="attendence">Attendence :</string>
    <string name="slash">/</string>
    <string name="attendance">attendance</string>
    <string name="total_attendance">Total Attendance</string>
    <string name="roll_no">Roll No:</string>
    <string name="enter_roll_number_in_two_digits">Enter Roll Number in Two Digits</string>
</resources>