<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".register">

    <TextView

        android:id="@+id/crtpro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/create_profile"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/enter_name"
        android:hint="@string/enter_your_full_name"
        android:layout_below="@+id/crtpro"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/enter_branch"
        android:hint="@string/enter_your_branch"
        android:layout_below="@+id/enter_name"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/enter_email"
        android:hint="@string/enter_your_email_id"
        android:layout_below="@+id/enter_branch"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        tools:ignore="TextFields" />
    <Spinner
        android:id="@+id/enter_roll"
        android:layout_below="@+id/enter_email"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"/>
    <EditText
        android:id="@+id/enter_div"
        android:hint="@string/division"
        android:layout_below="@+id/enter_roll"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/enter_div"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/Password"
        android:autofillHints="" />

    <EditText
        android:id="@+id/enter_cpassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/enter_password"
        android:hint="@string/confirm_password"
        android:autofillHints="" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@drawable/button_gradient"
        android:layout_below="@id/enter_cpassword"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>