<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="181dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/terna"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="335dp"
        android:layout_height="wrap_content"

        android:layout_below="@id/login_logo"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/textbox_gradient"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/Email"
        android:singleLine="true"
        android:textSize="18sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_email"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:singleLine="true"
        android:background="@drawable/textbox_gradient"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/enter_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</RelativeLayout>