<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp"
        tools:ignore="PrivateResource">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stdName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout01"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stdBranch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/descripition"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stdEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Email"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="2dp">

                    <TextView
                        android:id="@+id/div"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="Div: "
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/stdDiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/div"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/roll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="Roll No: "
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/stdRoll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/roll"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>