<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".showAttendance">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient1"
        app:title="Attendance Information"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/pname"
                android:text="name"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/pbranch"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/pemail"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginBottom="2dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="2dp">
                <TextView
                    android:id="@+id/div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Div: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/pdiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/div"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/roll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Roll No: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/proll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/roll"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Total Attendance (All Subject) : "
                    android:layout_marginEnd="10dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tpresent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/ttotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/div"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Overall Percentage : "
                    android:layout_marginEnd="10dp"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="%"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/current_month"
                    android:text="@string/app_name"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Present : "
                    android:textSize="18sp"
                    android:textColor="#000000"
                    />
                <TextView
                    android:id="@+id/pre"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:layout_marginStart="2dp"
                    android:textColor="#000000"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textSize="18sp" />
                <TextView
                    android:textSize="18sp"
                    android:id="@+id/tot"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textColor="#000000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Overall Percentage : "
                    android:textColor="#000000"
                    android:layout_marginEnd="10dp"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text=""
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="%"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"
                android:background="@drawable/border"
                android:layout_marginBottom="40dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@drawable/border"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>